<resources>
    <string name="app_name">HW1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount_borrow">Loan Amount</string>
    <string name="Interest">Interest Rate</string>
    <string name="loan">Loan Term(years)</string>
    <string name="taxes">Taxes and Insurance</string>
    <string name="calculate_btn">Calculate</string>
    <string name="Monthly_pay">Monthly Payment</string>
</resources>
